--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "module": "esnext",
     "moduleResolution": "bundler"
   },
-  "include": ["vite.config.mts"],
-
+  "include": [
+    "vite.config.mts"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
